<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- main activity -->
    <item name="llAppLayout" type="id"/>
    <item name="ivAppLogo" type="id"/>
    <item name="tvAppName" type="id"/>
    <item name="tvTagline" type="id"/>
    <item name="llListingLayout" type="id"/>
    <item name="ivListingIcon" type="id"/>
    <item name="tvListingName" type="id"/>
    <item name="llSearchLayout" type="id"/>
    <item name="ivSearchIcon" type="id"/>
    <item name="tvSearchName" type="id"/>
    <item name="llFavoritesLayout" type="id"/>
    <item name="ivFavoritesIcon" type="id"/>
    <item name="tvFavoritesName" type="id"/>

    <!-- search navigation -->
    <item name="llSearchNavigationLayout" type="id"/>
    <item name="ivSearchNavigationIcon" type="id"/>
    <item name="tvSearchNavigationName" type="id"/>
    <item name="llSearchNavigationMatchLayout" type="id"/>
    <item name="ivSearchNavigationMatchIcon" type="id"/>
    <item name="tvSearchNavigationMatchName" type="id"/>
    <item name="llSearchNavigationTeamLayout" type="id"/>
    <item name="ivSearchNavigationTeamIcon" type="id"/>
    <item name="tvSearchNavigationTeamName" type="id"/>

    <!-- favorites navigation -->
    <item name="llFavoritesNavigationLayout" type="id"/>
    <item name="ivFavoritesNavigationIcon" type="id"/>
    <item name="tvFavoritesNavigationName" type="id"/>
    <item name="llFavoritesNavigationMatchesLayout" type="id"/>
    <item name="ivFavoritesNavigationMatchesIcon" type="id"/>
    <item name="tvFavoritesNavigationMatchesName" type="id"/>
    <item name="llFavoritesNavigationTeamsLayout" type="id"/>
    <item name="ivFavoritesNavigationTeamsIcon" type="id"/>
    <item name="tvFavoritesNavigationTeamsName" type="id"/>

    <!-- league listing -->
    <item name="llLeagueLayout" type="id"/>
    <item name="ivLeagueBadge" type="id"/>
    <item name="tvLeagueName" type="id"/>
    <item name="glLeagueButtonGuideline" type="id"/>
    <item name="llListingTeamsLayout" type="id"/>
    <item name="ivListingTeamsIcon" type="id"/>
    <item name="tvListingTeamsName" type="id"/>
    <item name="llListingStandingsLayout" type="id"/>
    <item name="ivListingStandingsIcon" type="id"/>
    <item name="tvListingStandingsName" type="id"/>
    <item name="llListingDescriptionLayout" type="id"/>
    <item name="ivListingDescriptionIcon" type="id"/>
    <item name="tvListingDescriptionName" type="id"/>
    <item name="llListingScheduleLayout" type="id"/>
    <item name="ivListingScheduleIcon" type="id"/>
    <item name="tvListingScheduleName" type="id"/>

    <!-- league spinner -->
    <item name="llLeagueSpinnerLayout" type="id"/>
    <item name="ivLeagueSpinnerBadge" type="id"/>
    <item name="tvLeagueSpinnerName" type="id"/>

    <!-- match listing -->
    <item name="glMatchCenterGuideline" type="id"/>
    <item name="tvMatchDateTime" type="id"/>
    <item name="glDateTimeGuideline" type="id"/>
    <item name="llHomeLayout" type="id"/>
    <item name="ivHomeBadge" type="id"/>
    <item name="tvHomeName" type="id"/>
    <item name="tvHomeScore" type="id"/>
    <item name="llAwayLayout" type="id"/>
    <item name="ivAwayBadge" type="id"/>
    <item name="tvAwayName" type="id"/>
    <item name="tvAwayScore" type="id"/>
    <item name="glShowDetailsGuideline" type="id"/>
    <item name="tvMatchShowDetails" type="id"/>

    <!-- team listing -->
    <item name="tvTeamListingResults" type="id"/>
    <item name="pbTeamListingProgressBar" type="id"/>
    <item name="rvTeamListingRecyclerView" type="id"/>
    <item name="llTeamLayout" type="id"/>
    <item name="ivTeamBadge" type="id"/>
    <item name="tvTeamName" type="id"/>
    <item name="glTeamButtonGuideline" type="id"/>
    <item name="llTeamDetailsLayout" type="id"/>
    <item name="ivTeamDetailsIcon" type="id"/>
    <item name="tvTeamDetailsName" type="id"/>
    <item name="llTeamPlayersLayout" type="id"/>
    <item name="ivTeamPlayersIcon" type="id"/>
    <item name="tvTeamPlayersName" type="id"/>

    <!-- player listing -->
    <item name="tvPlayerListingResults" type="id"/>
    <item name="pbPlayerListingProgressBar" type="id"/>
    <item name="rvPlayerListingRecyclerView" type="id"/>
    <item name="llPlayerLayout" type="id"/>
    <item name="ivPlayerThumb" type="id"/>
    <item name="tvPlayerName" type="id"/>
    <item name="glPlayerButtonGuideline" type="id"/>
    <item name="llPlayerDetailsLayout" type="id"/>
    <item name="ivPlayerDetailsIcon" type="id"/>
    <item name="tvPlayerDetailsName" type="id"/>

    <!-- league navigation -->
    <item name="llNavigationHeaderLayout" type="id"/>
    <item name="ivNavigationHeaderBadge" type="id"/>
    <item name="tvNavigationHeaderName" type="id"/>
    <item name="llNavigationDescriptionLayout" type="id"/>
    <item name="ivNavigationDescriptionIcon" type="id"/>
    <item name="tvNavigationDescriptionName" type="id"/>
    <item name="llNavigationScheduleLayout" type="id"/>
    <item name="ivNavigationScheduleIcon" type="id"/>
    <item name="tvNavigationScheduleName" type="id"/>

    <!-- league standings -->
    <item name="pbLeagueStandingsProgressBar" type="id"/>
    <item name="tvLeagueStandingsHeader" type="id"/>
    <item name="scvLeagueStandingsScrollView" type="id"/>
    <item name="rvLeagueStandingsTable" type="id"/>
    <item name="tvLeagueStandingsPosition" type="id"/>
    <item name="tvLeagueStandingsName" type="id"/>
    <item name="llLeagueStandingsInfoBoxLayout" type="id"/>
    <item name="tvLeagueStandingsWDL" type="id"/>
    <item name="tvLeagueStandingsGoals" type="id"/>
    <item name="tvLeagueStandingsTotalPoints" type="id"/>
    <item name="tvLeagueStandingsFooter" type="id"/>

    <!-- league description -->
    <item name="ivDescriptionBadge" type="id"/>
    <item name="tvDescriptionName" type="id"/>
    <item name="tvDescriptionDesc" type="id"/>

    <!-- league schedule -->
    <item name="llScheduleLayout" type="id"/>
    <item name="bnScheduleNav" type="id"/>

    <!-- match search -->
    <item name="svMatchSearchView" type="id"/>
    <item name="pbMatchSearchProgressBar" type="id"/>
    <item name="tvMatchSearchResults" type="id"/>
    <item name="rvMatchSearchRecyclerView" type="id"/>
    
    <!-- team search -->
    <item name="svTeamSearchView" type="id"/>
    <item name="pbTeamSearchProgressBar" type="id"/>
    <item name="tvTeamSearchResults" type="id"/>
    <item name="rvTeamSearchRecyclerView" type="id"/>

    <!-- match details -->
    <item name="glMatchDetailsHeaderCenterGuideline" type="id"/>

    <item name="glMatchDetailsFavoriteGuideline" type="id"/>
    <item name="glMatchDetailsDateGuideline" type="id"/>
    <item name="glMatchDetailsHomeGuideline" type="id"/>
    <item name="glMatchDetailsAwayGuideline" type="id"/>

    <item name="llMatchDetailsFavoriteLayout" type="id"/>
    <item name="ivMatchDetailsFavoriteIcon" type="id"/>
    <item name="tvMatchDetailsFavoriteName" type="id"/>

    <item name="clMatchDetailsHeader" type="id"/>
    <item name="tvMatchDetailsDateTime" type="id"/>
    <item name="llMatchDetailsHomeTeam" type="id"/>
    <item name="ivMatchDetailsHomeBadge" type="id"/>
    <item name="tvMatchDetailsHomeName" type="id"/>
    <item name="tvMatchDetailsHomeScore" type="id"/>
    <item name="llMatchDetailsAwayTeam" type="id"/>
    <item name="ivMatchDetailsAwayBadge" type="id"/>
    <item name="tvMatchDetailsAwayName" type="id"/>
    <item name="tvMatchDetailsAwayScore" type="id"/>

    <item name="clMatchDetailsHome" type="id"/>
    <item name="llMatchDetailsHomeTeamDetails" type="id"/>
    <item name="ivMatchDetailsHomeBadgeDetails" type="id"/>
    <item name="tvMatchDetailsHomeNameDetails" type="id"/>
    <item name="tvMatchDetailsHomeGoals" type="id"/>
    <item name="tvMatchDetailsHomeRedCards" type="id"/>
    <item name="tvMatchDetailsHomeYellowCards" type="id"/>
    <item name="tvMatchDetailsHomeGoalkeeper" type="id"/>
    <item name="tvMatchDetailsHomeDefenders" type="id"/>
    <item name="tvMatchDetailsHomeMidfielders" type="id"/>
    <item name="tvMatchDetailsHomeForwards" type="id"/>
    <item name="tvMatchDetailsHomeSubstitutes" type="id"/>

    <item name="clMatchDetailsAway" type="id"/>
    <item name="llMatchDetailsAwayTeamDetails" type="id"/>
    <item name="ivMatchDetailsAwayBadgeDetails" type="id"/>
    <item name="tvMatchDetailsAwayNameDetails" type="id"/>
    <item name="tvMatchDetailsAwayGoals" type="id"/>
    <item name="tvMatchDetailsAwayRedCards" type="id"/>
    <item name="tvMatchDetailsAwayYellowCards" type="id"/>
    <item name="tvMatchDetailsAwayGoalkeeper" type="id"/>
    <item name="tvMatchDetailsAwayDefenders" type="id"/>
    <item name="tvMatchDetailsAwayMidfielders" type="id"/>
    <item name="tvMatchDetailsAwayForwards" type="id"/>
    <item name="tvMatchDetailsAwaySubstitutes" type="id"/>

    <!-- team details -->
    <item name="llTeamDetailsActivityFavoriteLayout" type="id"/>
    <item name="ivTeamDetailsActivityFavoriteIcon" type="id"/>
    <item name="tvTeamDetailsActivityFavoriteName" type="id"/>

    <item name="ivTeamDetailsActivityBanner" type="id"/>
    <item name="ivTeamDetailsActivityBadge" type="id"/>
    <item name="tvTeamDetailsActivityName" type="id"/>
    <item name="tvTeamDetailsActivityYearFormed" type="id"/>
    <item name="tvTeamDetailsActivityStadium" type="id"/>
    <item name="tvTeamDetailsActivityStadiumLocation" type="id"/>
    <item name="tvTeamDetailsActivityStadiumCapacity" type="id"/>
    <item name="tvTeamDetailsActivityWebsite" type="id"/>
    <item name="tvTeamDetailsActivityFacebook" type="id"/>
    <item name="tvTeamDetailsActivityTwitter" type="id"/>
    <item name="tvTeamDetailsActivityInstagram" type="id"/>
    <item name="tvTeamDetailsActivityYoutube" type="id"/>
    <item name="tvTeamDetailsActivityDescription" type="id"/>

    <!-- player details -->
    <item name="ivPlayerDetailsActivityFanart" type="id"/>
    <item name="ivPlayerDetailsActivityThumb" type="id"/>
    <item name="tvPlayerDetailsActivityName" type="id"/>
    <item name="tvPlayerDetailsActivityNationality" type="id"/>
    <item name="tvPlayerDetailsActivityTeam" type="id"/>
    <item name="tvPlayerDetailsActivityBirthDate" type="id"/>
    <item name="tvPlayerDetailsActivityBirthLocation" type="id"/>
    <item name="tvPlayerDetailsActivitySignedDate" type="id"/>
    <item name="tvPlayerDetailsActivityPosition" type="id"/>
    <item name="tvPlayerDetailsActivityDescription" type="id"/>
</resources>